Use List.of instead of Collection.singletonList